monitoring/kube-prometheus-stack/http-route-alertmanager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: kube-prometheus-stack
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "alertmanager.shrria.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-kube-prometheus-stack-alertmanager
          port: 9093
